- Magento backoffice  - Add Invoice action  - Add Creditmemo action  - Add Transaction informations  - Add Cancel and Void action  - Add encryption to md5key and remote password  - Add Mass incoice action  - Add Mass Creditmemo action  - Add Mass Delete action  - Add auto order canceling - Updated payment window layout and logic. - Add Surcharge fee as an order item - Module name change - Performance optimization and code refactoring

--- a/app/design/adminhtml/default/default/layout/bambora.xml
+++ b/app/design/adminhtml/default/default/layout/bambora.xml
@@ -12,9 +12,18 @@
     <label>All Pages</label>
     <reference name="head">
       <action method="addCss">
-        <stylesheet>css/bamboraadmin.css</stylesheet>
+        <stylesheet>css/bambora/bamboraadminhtml.css</stylesheet>
       </action>
     </reference>
   </default>
 
+  <adminhtml_sales_order_view>
+    <reference name="sales_order_tabs">
+      <action method="addTab">
+        <name>bambora_online_info</name>
+        <block>bambora/adminhtml_sales_order_view_tab_info</block>
+      </action>
+    </reference>
+  </adminhtml_sales_order_view>
+  
 </layout>
