--- a/app/design/frontend/base/default/template/bambora/checkout/form.phtml
+++ b/app/design/frontend/base/default/template/bambora/checkout/form.phtml
@@ -1,20 +1,5 @@
-﻿<?php
-$paymentCards = $this->getPaymentCards();
-
-echo '<div class="form-list" id="payment_form_'.$this->getMethodCode().'" style="display:none">';
-echo '<p class="bambora_formtext">'.$this->__("You have chosen to pay for the order using Bambora Checkout.").'</p>';
-if(is_array($paymentCards))
-{
-  if(count($paymentCards) > 0)
-  {
-    echo '<p class="bambora_formtext_image">'.$this->__("The shop accepts the following payment types").'</p>';
-    foreach($paymentCards as $paymentcard)
-    {
-	    echo '<img class="bambora_form_paymentcard" src="https://d3r1pwhfz7unl9.cloudfront.net/paymentlogos/'.$paymentcard.'.png" />';
-    }
-  }
-}else{
-  echo '<p class="bambora_formtext_image">'.$paymentCards.'</p>';
-}
-echo '</div>';
-?>
+<fieldset class="form-list">
+  <ul id="payment_form_<?php echo $this->getMethodCode()?>" style="display:none">
+    <?php echo $this->getPaymentHtml(); ?>
+  </ul>
+</fieldset>
