* New payment logos * Fix for missing subtotal when using surcharge as an order line * Changed instant invoice to, only capture if instant capture is on.

--- a/skin/adminhtml/base/default/css/bambora/bamboraadminhtml.css
+++ b/skin/adminhtml/base/default/css/bambora/bamboraadminhtml.css
@@ -6,9 +6,10 @@
 }
 
 .bambora_paymentcard {
-    height: 17px;
+    max-width: 36px;
     position: relative;
     vertical-align: middle;
+    padding-left: 5px;
 }
 .bambora_operations_title{
     border-bottom:1pt solid black;
